[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentless"
version = "0.1.0"
description = "Agentless with easy setup"
readme = "README.md"
authors = [
    { name = "Schettler, Darien", email = "ds08tf@gmail.com" },
    { name = "Xia, Chunqiu Steven" },
    { name = "Deng, Yinlin" },
    { name = "Dunn, Soren" },
    { name = "Zhang, Lingming" },
]
license = { file = "LICENSE" }
dependencies = [
    "anthropic",
    "openai",
    "pre-commit",
    "datasets",
    "tiktoken",
    "libcst",
    "llama-index",
    "jsonlines",
    "swebench @ git+https://github.com/princeton-nlp/SWE-bench"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/darien-schettler/Agentless"
"Repository" = "https://github.com/darien-schettler/Agentless"

[tool.setuptools]
packages = ["agentless"]
